--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
         "@azure/cosmos": "^4.0.0",
         "body-parser": "^1.17.2",
         "cookie-parser": "^1.4.3",
+        "cors": "^2.8.5",
         "debug": "^3.0.0",
         "express": "^4.15.3",
         "jade": "^1.11.0",
